Various Fixes